# semantic-search-cli

./: .gitignore  Cargo.toml  README.md  env.example
.github/workflows/: release.yml
src/: ai.rs  cli_ui.rs  main.rs  qdrant_client.rs
