[package]
name = "semantic-search-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
walkdir = "2.3"
markitdown = "0.1.10"
text-splitter = { version = "0.28", features = ["markdown"] }
fastembed = "5.2.0"
qdrant-client = "1.15"
md5 = "0.7"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15"
uuid = { version = "1.0", features = ["v4"] }
# Modern CLI dependencies
indicatif = "0.17"
console = "0.15"
colored = "2.0"
dialoguer = "0.11"
tabled = "0.15"
regex = "1.0"
