[package]
name = "semantic-search-cli"
version = "0.5.0"
edition = "2021"
authors = ["Jamie Bowley"]
license = "Apache-2.0"
rust-version = "1.88.0"
description = "Vectorize and search documents, locally! "
repository = "https://github.com/jpbow/semantic-search-cli"
homepage = "https://github.com/jpbow/semantic-search-cli"
readme = "README.md"
keywords = ["search", "semantic", "documents", "cli", "vectorize", "ai"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "ssc"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
walkdir = "2.3"
markitdown = "0.1.10"
text-splitter = { version = "0.28", features = ["markdown"] }
fastembed = "5.2.0"
qdrant-client = "1.15"
md5 = "0.7"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15"
uuid = { version = "1.0", features = ["v4"] }
# Modern CLI dependencies
indicatif = "0.17"
console = "0.15"
colored = "2.0"
dialoguer = "0.11"
tabled = "0.15"
regex = "1.0"
openssl = { version = "0.10", features = ["vendored"] }
